[project]
name = "blog"

[tool.pyside6-project]
files = [
    "Gemfile",
    "Gemfile.lock",
    "LICENSE",
    "README.md",
    "_config.yml",
    "_sass/custom/custom.scss",
    "addfilestopyproject.py",
    "docs/miscellaneous.md",
    "docs/miscellaneous/0001_monitor_file_creation.md",
    "docs/miscellaneous/0002_list_running_processes.md",
    "docs/qt_quick.md",
    "docs/qt_quick/01_template.md",
    "docs/qt_quick/01_template/01_template.md",
    "docs/qt_quick/02_qt_qml.md",
    "docs/qt_quick/02_qt_qml/01_basics.md",
    "docs/qt_quick/02_qt_qml/01_basics/01_template.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/01_expose_python_method_to_qml.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/02_expose_python_signal_to_qml.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/03_expose_python_property_to_qml.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/04_python_style_property.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/05_grouped_properties.md",
    "docs/qt_quick/02_qt_qml/02_qml_python_integration/06_setinitialproperties.md",
    "docs/qt_quick/02_qt_qml/03_signals_and_slots.md",
    "docs/qt_quick/02_qt_qml/03_signals_and_slots/01_rootobject_findchild.md",
    "docs/qt_quick/02_qt_qml/03_signals_and_slots/02_setinitialproperties.md",
    "docs/qt_quick/02_qt_qml/03_signals_and_slots/03_qmlelement.md",
    "docs/qt_quick/02_qt_qml/03_signals_and_slots/04_rootobject_findchild.md",
    "docs/qt_quick/03_qt_quick.md",
    "docs/qt_quick/03_qt_quick/01_template.md",
    "docs/qt_quick/04_qt_quick_controls.md",
    "docs/qt_quick/04_qt_quick_controls/01_layouts.md",
    "docs/qt_quick/04_qt_quick_controls/01_layouts/01_columnlayout.md",
    "docs/qt_quick/04_qt_quick_controls/01_layouts/02_rowlayout.md",
    "docs/qt_quick/04_qt_quick_controls/01_layouts/03_gridlayout.md",
    "docs/qt_widgets.md",
    "docs/qt_widgets/01_template_scripts.md",
    "docs/qt_widgets/01_template_scripts/template1.md",
    "docs/qt_widgets/01_template_scripts/template2.md",
    "docs/qt_widgets/02_signals_and_slots.md",
    "docs/qt_widgets/02_signals_and_slots/01_basic_example.md",
    "docs/qt_widgets/02_signals_and_slots/02_using_lambdas.md",
    "docs/qt_widgets/03_layouts.md",
    "docs/qt_widgets/03_layouts/01_vbox_layout.md",
    "docs/qt_widgets/03_layouts/02_hbox_layout.md",
    "docs/qt_widgets/03_layouts/03_grid_layout.md",
    "docs/qt_widgets/03_layouts/04_form_layout.md",
    "docs/qt_widgets/04_buttons.md",
    "docs/qt_widgets/04_buttons/01_push_button.md",
    "docs/qt_widgets/04_buttons/02_check_box.md",
    "docs/qt_widgets/04_buttons/03_radio_button.md",
    "docs/qt_widgets/05_input_widgets.md",
    "docs/qt_widgets/05_input_widgets/01_line_edit.md",
    "docs/qt_widgets/05_input_widgets/02_combo_box.md",
    "docs/qt_widgets/05_input_widgets/03_spin_box.md",
    "docs/qt_widgets/05_input_widgets/04_text_edit.md",
    "docs/qt_widgets/05_input_widgets/05_plain_text_edit.md",
    "docs/qt_widgets/06_item_widgets.md",
    "docs/qt_widgets/06_item_widgets/01_list_widget.md",
    "docs/qt_widgets/06_item_widgets/02_table_widget.md",
    "docs/qt_widgets/06_item_widgets/03_tree_widget.md",
    "docs/qt_widgets/07_item_views.md",
    "docs/qt_widgets/07_item_views/01_list_view.md",
    "docs/qt_widgets/07_item_views/02_table_view.md",
    "docs/qt_widgets/07_item_views/03_tree_view.md",
    "docs/qt_widgets/08_containers.md",
    "docs/qt_widgets/08_containers/01_group_box.md",
    "docs/qt_widgets/08_containers/02_scroll_area.md",
    "docs/qt_widgets/08_containers/03_tool_box.md",
    "docs/qt_widgets/08_containers/04_tab_widget.md",
    "docs/qt_widgets/08_containers/05_splitters.md",
    "docs/qt_widgets/09_main_window.md",
    "docs/qt_widgets/09_main_window/01_central_widget.md",
    "docs/qt_widgets/09_main_window/02_status_bar.md",
    "docs/qt_widgets/09_main_window/03_menus.md",
    "docs/qt_widgets/09_main_window/04_toolbar.md",
    "docs/qt_widgets/09_main_window/05_dock_widget.md",
    "docs/qt_widgets/10_dialogs.md",
    "docs/qt_widgets/10_dialogs/01_message_boxes.md",
    "docs/qt_widgets/10_dialogs/02_dialogs.md",
    "docs/qt_widgets/11_multithreading.md",
    "docs/qt_widgets/11_multithreading/00_block_gui_thread.md",
    "docs/qt_widgets/11_multithreading/01_movetothread.md",
    "docs/qt_widgets/11_multithreading/01_movetothread/01_movetothread_template.md",
    "docs/qt_widgets/11_multithreading/01_movetothread/02_movetothread_walk_filesystem.md",
    "docs/qt_widgets/11_multithreading/01_movetothread/03_movetothread_template_reuse_thread.md",
    "docs/qt_widgets/11_multithreading/01_movetothread/04_movetothread_walkfs_reuse_thread.md",
    "docs/qt_widgets/11_multithreading/01_movetothread/05_signals_and_slots_across_threads.md",
    "docs/qt_widgets/11_multithreading/02_qthread_subclass.md",
    "docs/qt_widgets/11_multithreading/02_qthread_subclass/01_qthreadsubclass_template.md",
    "docs/qt_widgets/11_multithreading/02_qthread_subclass/02_qthreadsubclass_walk_filesystem.md",
    "docs/qt_widgets/11_multithreading/03_qthreadpool.md",
    "docs/qt_widgets/11_multithreading/03_qthreadpool/01_threadpool_template.md",
    "docs/qt_widgets/11_multithreading/03_qthreadpool/02_threadpool_walk_filesystem.md",
    "docs/qt_widgets/12_model_view_programming.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel/01_list_model.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel/02_list_model_editable.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel/03_list_model_datawidgetmapper.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel/04_list_model_resizable_without_mapper.md",
    "docs/qt_widgets/12_model_view_programming/01_qabstractlistmodel/05_list_model_resizable.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel/01_table_model.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel/02_table_model_editable.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel/03_table_model_datawidgetmapper.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel/04_table_model_resizable.md",
    "docs/qt_widgets/12_model_view_programming/02_qabstracttablemodel/05_table_model_resizable_datawidgetmapper.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/01_item_model.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/02_item_model_tree_view.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/03_item_model_tree_view_multiple_columns.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/04_item_model_tree_view_refactored.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/05_item_model_tree_view_editable.md",
    "docs/qt_widgets/12_model_view_programming/03_qabstractitemmodel/06_item_model_tree_view_resizable.md",
    "docs/tags.md",
    "images/miscellaneous/0002_list_running_processes.png",
    "images/qtwidgetsexamples/01_template_scripts/01_helloworld.png",
    "images/qtwidgetsexamples/01_template_scripts/02_helloworld1.png",
    "images/qtwidgetsexamples/02_signals_and_slots/01_basic_example.png",
    "images/qtwidgetsexamples/02_signals_and_slots/02_using_lambdas.png",
    "images/qtwidgetsexamples/03_layouts/01_vbox_layout.png",
    "images/qtwidgetsexamples/03_layouts/02_hbox_layout.png",
    "images/qtwidgetsexamples/03_layouts/03_grid_layout.png",
    "images/qtwidgetsexamples/03_layouts/04_form_layout.png",
    "images/qtwidgetsexamples/04_buttons/01_push_button.png",
    "images/qtwidgetsexamples/04_buttons/02_check_box.png",
    "images/qtwidgetsexamples/04_buttons/03_radio_button.png",
    "images/qtwidgetsexamples/05_input_widgets/01_line_edit.png",
    "images/qtwidgetsexamples/05_input_widgets/02_combo_box.png",
    "images/qtwidgetsexamples/05_input_widgets/03_spin_box.png",
    "images/qtwidgetsexamples/05_input_widgets/04_text_edit.png",
    "images/qtwidgetsexamples/05_input_widgets/05_plain_text_edit.png",
    "images/qtwidgetsexamples/06_item_widgets/01_list_widget.png",
    "images/qtwidgetsexamples/06_item_widgets/02_table_widget.png",
    "images/qtwidgetsexamples/06_item_widgets/03_tree_widget.png",
    "images/qtwidgetsexamples/07_item_views/01_list_view.png",
    "images/qtwidgetsexamples/07_item_views/02_table_view.png",
    "images/qtwidgetsexamples/07_item_views/03_tree_view.png",
    "images/qtwidgetsexamples/08_containers/01_group_box.png",
    "images/qtwidgetsexamples/08_containers/02_scroll_area.jpg",
    "images/qtwidgetsexamples/08_containers/03_tool_box.png",
    "images/qtwidgetsexamples/08_containers/04_tab_widget.png",
    "images/qtwidgetsexamples/08_containers/05_splitters.png",
    "images/qtwidgetsexamples/09_main_window/01_central_widget.png",
    "images/qtwidgetsexamples/09_main_window/02_status_bar.png",
    "images/qtwidgetsexamples/09_main_window/03_menus.png",
    "images/qtwidgetsexamples/09_main_window/04_toolbar.png",
    "images/qtwidgetsexamples/09_main_window/05_dock_widget.png",
    "index.md",
    "src/miscellaneous/0001_monitor_file_creation.py",
    "src/miscellaneous/0002_list_running_processes.py",
    "src/qtpythonintegration/01_terminal_apps/placeholder.html",
    "src/qtpythonintegration/02_numpy/placeholder.html",
    "src/qtpythonintegration/03_matplotlib/placeholder.html",
    "src/qtpythonintegration/04_concurrent_futures/placeholder.html",
    "src/qtpythonintegration/05_multiprocessing/placeholder.html",
    "src/qtpythonintegration/06_queue/placeholder.html",
    "src/qtpythonintegration/07_requests/placeholder.html",
    "src/qtpythonintegration/08_pandas/placeholder.html",
    "src/qtpythonintegration/09_asyncio/placeholder.html",
    "src/qtpythonintegration/10_scipy/placeholder.html",
    "src/qtpythonintegration/11_sqlalchemy/placeholder.html",
    "src/qtpythonintegration/12_pyzmq/placeholder.html",
    "src/qtpythonintegration/13_flask/placeholder.html",
    "src/qtquickexamples/01_template/01_hello_world.py",
    "src/qtquickexamples/01_template/01_hello_world.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/01_object_declaration/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/01_object_declaration/object_declaration.py",
    "src/qtquickexamples/02_qt_qml/01_basics/01_object_declaration/object_declaration.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/02_id_attribute/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/02_id_attribute/id_attribute.py",
    "src/qtquickexamples/02_qt_qml/01_basics/02_id_attribute/id_attribute.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/03_properties/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/03_properties/properties.py",
    "src/qtquickexamples/02_qt_qml/01_basics/03_properties/properties.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/04_grouped_properties/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/04_grouped_properties/grouped_properties.py",
    "src/qtquickexamples/02_qt_qml/01_basics/04_grouped_properties/grouped_properties.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/ConsoleLogTarget.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/FileLogTarget.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/LogTarget.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/PopupLogTarget.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/list_properties.py",
    "src/qtquickexamples/02_qt_qml/01_basics/05_list_properties/list_properties.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/06_property_change_signals/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/06_property_change_signals/signals.py",
    "src/qtquickexamples/02_qt_qml/01_basics/06_property_change_signals/signals.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/07_custom_signals/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/07_custom_signals/signals.py",
    "src/qtquickexamples/02_qt_qml/01_basics/07_custom_signals/signals.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/08_signals_connections/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/08_signals_connections/signals.py",
    "src/qtquickexamples/02_qt_qml/01_basics/08_signals_connections/signals.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/09_connecting_signals/Logger.qml",
    "src/qtquickexamples/02_qt_qml/01_basics/09_connecting_signals/signals.py",
    "src/qtquickexamples/02_qt_qml/01_basics/09_connecting_signals/signals.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/01_method.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/01_method.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/02_signal.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/02_signal.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/03_property.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/03_property.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/04_python_style_property.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/04_python_style_property.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/05_grouped_properties.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/05_grouped_properties.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/06_setinitialproperties.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/06_setinitialproperties.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/07_qobject_setproperty.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/07_qobject_setproperty.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/08_singleton.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/08_singleton.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/09_singleton_create.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/09_singleton_create.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/10_list_properties/list_properties.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/10_list_properties/list_properties.qml",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/10_list_properties/logtarget.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/11_attached_properties.py",
    "src/qtquickexamples/02_qt_qml/02_qml_python_integration/11_attached_properties.qml",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/01_rootobject_findchild.py",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/01_rootobject_findchild.qml",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/02_setinitialproperties.py",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/02_setinitialproperties.qml",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/03_qmlelement.py",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/03_qmlelement.qml",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/04_rootobject_findchild.py",
    "src/qtquickexamples/02_qt_qml/03_signals_and_slots/04_rootobject_findchild.qml",
    "src/qtquickexamples/03_qt_quick/01_template/01_hello_world.py",
    "src/qtquickexamples/03_qt_quick/01_template/01_hello_world.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/01_display_rectangle/display_rectangle.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/01_display_rectangle/display_rectangle.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/02_show_image/image.png",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/02_show_image/show_image.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/02_show_image/show_image.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/03_show_text/show_text.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/03_show_text/show_text.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/04_vector2d/vector2d_demo.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/04_vector2d/vector2d_demo.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/05_show_animated_image/show_animated_image.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/05_show_animated_image/show_animated_image.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/05_show_animated_image/spinner.gif",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/06_show_sprites/show_sprites.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/06_show_sprites/show_sprites.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/06_show_sprites/sprites.png",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/07_border_image/border.png",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/07_border_image/border_image.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/07_border_image/border_image.qml",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/08_canvas/use_canvas.py",
    "src/qtquickexamples/03_qt_quick/02_basic_visual_items_and_types/08_canvas/use_canvas.qml",
    "src/qtquickexamples/03_qt_quick/03_positioners/01_column/column_positioner.py",
    "src/qtquickexamples/03_qt_quick/03_positioners/01_column/column_positioner.qml",
    "src/qtquickexamples/03_qt_quick/03_positioners/02_row/row_positioner.py",
    "src/qtquickexamples/03_qt_quick/03_positioners/02_row/row_positioner.qml",
    "src/qtquickexamples/03_qt_quick/03_positioners/03_grid/grid_positioner.py",
    "src/qtquickexamples/03_qt_quick/03_positioners/03_grid/grid_positioner.qml",
    "src/qtquickexamples/03_qt_quick/03_positioners/04_flow/flow_positioner.py",
    "src/qtquickexamples/03_qt_quick/03_positioners/04_flow/flow_positioner.qml",
    "src/qtquickexamples/03_qt_quick/03_positioners/05_attached_properties_and_transitions/attached_props.py",
    "src/qtquickexamples/03_qt_quick/03_positioners/05_attached_properties_and_transitions/attached_props.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/01_mouse_area/mouse_area.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/01_mouse_area/mouse_area.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/02_hover_detection/hover_detection.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/02_hover_detection/hover_detection.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/03_key_presses/key_presses.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/03_key_presses/key_presses.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/04_dragging_items/dragging.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/04_dragging_items/dragging.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/05_tap_handler/tap_handler.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/05_tap_handler/tap_handler.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/06_wheel_zoom/wheel_zoom.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/06_wheel_zoom/wheel_zoom.qml",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/07_key_navigation/key_navigation.py",
    "src/qtquickexamples/03_qt_quick/04_input_handlers_and_focus/07_key_navigation/key_navigation.qml",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/01_flickable_basic/flickable_basic.py",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/01_flickable_basic/flickable_basic.qml",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/02_panning/panning.py",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/02_panning/panning.qml",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/03_flipable/flipable_basic.py",
    "src/qtquickexamples/03_qt_quick/05_flickable_and_scrollable_content/03_flipable/flipable_basic.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/01_basic/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/01_basic/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/01_basic/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/01_basic/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/02_editable/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/02_editable/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/02_editable/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/02_editable/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/03_editable_inline/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/03_editable_inline/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/03_editable_inline/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/03_editable_inline/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/04_resizable/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/04_resizable/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/04_resizable/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/04_resizable/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/05_control_mapping/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/05_control_mapping/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/05_control_mapping/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/01_listmodel_static_data/05_control_mapping/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/02_listmodel_static_data_legacy/static_data_legacy.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/02_listmodel_static_data_legacy/static_data_legacy.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/03_objectmodel/object_model.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/03_objectmodel/object_model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/04_xml_list_model/data.xml",
    "src/qtquickexamples/03_qt_quick/06_model_view/04_xml_list_model/xml_list_model.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/04_xml_list_model/xml_list_model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/01_integers/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/01_integers/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/01_integers/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/02_arrays/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/02_arrays/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/02_arrays/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/03_object_instances/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/03_object_instances/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/03_object_instances/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/05_integers_arays_and_object_instances/03_object_instances/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/06_delegate_chooser/chooser.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/06_delegate_chooser/chooser.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/06_delegate_chooser/error.png",
    "src/qtquickexamples/03_qt_quick/06_model_view/06_delegate_chooser/info.png",
    "src/qtquickexamples/03_qt_quick/06_model_view/06_delegate_chooser/warning.png",
    "src/qtquickexamples/03_qt_quick/06_model_view/07_delegate_model/delegatemodel.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/07_delegate_model/delegatemodel.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/08_delegate_model_group/delegatemodelgroup.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/08_delegate_model_group/delegatemodelgroup.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/09_package/file.png",
    "src/qtquickexamples/03_qt_quick/06_model_view/09_package/folder.png",
    "src/qtquickexamples/03_qt_quick/06_model_view/09_package/package.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/09_package/package.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/01_qabstractlistmodel/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/01_qabstractlistmodel/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/01_qabstractlistmodel/csvmodel.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/01_qabstractlistmodel/data.csv",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/01_qabstractlistmodel/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/02_qstringlistmodel/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/02_qstringlistmodel/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/10_pyside_models/02_qstringlistmodel/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/01_horizontal/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/01_horizontal/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/01_horizontal/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/02_highlight/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/02_highlight/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/02_highlight/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/02_highlight/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/03_header_and_footer/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/03_header_and_footer/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/03_header_and_footer/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/03_header_and_footer/main.py",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/04_sections/Delegate.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/04_sections/Main.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/04_sections/Model.qml",
    "src/qtquickexamples/03_qt_quick/06_model_view/11_list_view/04_sections/main.py",
    "src/qtquickexamples/03_qt_quick/07_animations_and_behaviors/placeholder.txt",
    "src/qtquickexamples/03_qt_quick/08_states_transitions_and_scene_management/placeholder.txt",
    "src/qtquickexamples/03_qt_quick/09_graphical_effects_and_shaders/placeholder.txt",
    "src/qtquickexamples/03_qt_quick/10_particles_system/placeholder.txt",
    "src/qtquickexamples/03_qt_quick/11_further_topics/placeholder.txt",
    "src/qtquickexamples/03_qt_quick/12_type_conversions/python_to_qml/Main.qml",
    "src/qtquickexamples/03_qt_quick/12_type_conversions/python_to_qml/main.py",
    "src/qtquickexamples/03_qt_quick/12_type_conversions/qml_to_python/Main.qml",
    "src/qtquickexamples/03_qt_quick/12_type_conversions/qml_to_python/main.py",
    "src/qtquickexamples/03_qt_quick/12_type_conversions/type_conversion.html",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/01_columnlayout.py",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/01_columnlayout.qml",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/02_rowlayout.py",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/02_rowlayout.qml",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/03_gridlayout.py",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/03_gridlayout.qml",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/04_stacklayout.py",
    "src/qtquickexamples/04_qt_quick_controls/01_layouts/04_stacklayout.qml",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/01_button.py",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/01_button.qml",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/02_checkbox.py",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/02_checkbox.qml",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/03_radiobutton.py",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/03_radiobutton.qml",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/04_switch.py",
    "src/qtquickexamples/04_qt_quick_controls/02_buttons/04_switch.qml",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/01_text_input.py",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/01_text_input.qml",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/02_text_field.py",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/02_text_field.qml",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/03_combo_box.py",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/03_combo_box.qml",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/04_spin_box.py",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/04_spin_box.qml",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/05_text_area.py",
    "src/qtquickexamples/04_qt_quick_controls/03_input_controls/05_text_area.qml",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/01_list_view.py",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/01_list_view.qml",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/02_table_view.py",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/02_table_view.qml",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/03_tree_view.py",
    "src/qtquickexamples/04_qt_quick_controls/04_item_views/03_tree_view.qml",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/01_group_box.py",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/01_group_box.qml",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/01_group_box_stacklayout.qml",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/02_scroll_view.py",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/02_scroll_view.qml",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/03_tab_bar.py",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/03_tab_bar.qml",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/04_split_view.py",
    "src/qtquickexamples/04_qt_quick_controls/05_containers/04_split_view.qml",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/01_content.py",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/01_content.qml",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/02_footer.py",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/02_footer.qml",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/03_menu_bar.py",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/03_menu_bar.qml",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/04_tool_bar.py",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/04_tool_bar.qml",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/icons/about.png",
    "src/qtquickexamples/04_qt_quick_controls/06_application_window/icons/exit.png",
    "src/qtquickexamples/11_multithreading/00_block_gui_thread/01_block.py",
    "src/qtquickexamples/11_multithreading/00_block_gui_thread/01_block.qml",
    "src/qtquickexamples/11_multithreading/01_movetothread/01_template.py",
    "src/qtquickexamples/11_multithreading/01_movetothread/01_template.qml",
    "src/qtquickexamples/11_multithreading/01_movetothread/02_walk_filesystem.py",
    "src/qtquickexamples/11_multithreading/01_movetothread/02_walk_filesystem.qml",
    "src/qtquickexamples/11_multithreading/01_movetothread/03_template_reusethread.py",
    "src/qtquickexamples/11_multithreading/01_movetothread/03_template_reusethread.qml",
    "src/qtquickexamples/11_multithreading/01_movetothread/04_walkfs_reusethread.py",
    "src/qtquickexamples/11_multithreading/01_movetothread/04_walkfs_reusethread.qml",
    "src/qtquickexamples/11_multithreading/01_movetothread/05_signals_and_slots_across_threads.py",
    "src/qtquickexamples/11_multithreading/01_movetothread/05_signals_and_slots_across_threads.qml",
    "src/qtquickexamples/11_multithreading/02_qthread_subclass/01_template.py",
    "src/qtquickexamples/11_multithreading/02_qthread_subclass/01_template.qml",
    "src/qtquickexamples/11_multithreading/02_qthread_subclass/02_walk_filesystem.py",
    "src/qtquickexamples/11_multithreading/02_qthread_subclass/02_walk_filesystem.qml",
    "src/qtquickexamples/11_multithreading/03_qthreadpool/01_template.py",
    "src/qtquickexamples/11_multithreading/03_qthreadpool/01_template.qml",
    "src/qtquickexamples/11_multithreading/03_qthreadpool/02_walk_filesystem.py",
    "src/qtquickexamples/11_multithreading/03_qthreadpool/02_walk_filesystem.qml",
    "src/qtwidgetsexamples/01_script_template/helloworld.py",
    "src/qtwidgetsexamples/01_script_template/helloworld1.py",
    "src/qtwidgetsexamples/02_signals_and_slots/01_basic_example.py",
    "src/qtwidgetsexamples/02_signals_and_slots/02_using_lambdas.py",
    "src/qtwidgetsexamples/02_signals_and_slots/03_custom_signal.py",
    "src/qtwidgetsexamples/02_signals_and_slots/03_signal_blocking.py",
    "src/qtwidgetsexamples/03_layouts/01_vbox_layout.py",
    "src/qtwidgetsexamples/03_layouts/02_hbox_layout.py",
    "src/qtwidgetsexamples/03_layouts/03_grid_layout.py",
    "src/qtwidgetsexamples/03_layouts/04_form_layout.py",
    "src/qtwidgetsexamples/04_buttons/01_push_button.py",
    "src/qtwidgetsexamples/04_buttons/02_check_box.py",
    "src/qtwidgetsexamples/04_buttons/03_radio_button.py",
    "src/qtwidgetsexamples/05_input_widgets/01_line_edit.py",
    "src/qtwidgetsexamples/05_input_widgets/02_combo_box.py",
    "src/qtwidgetsexamples/05_input_widgets/03_spin_box.py",
    "src/qtwidgetsexamples/05_input_widgets/04_text_edit.py",
    "src/qtwidgetsexamples/05_input_widgets/05_plain_text_edit.py",
    "src/qtwidgetsexamples/06_item_widgets/01_list_widget.py",
    "src/qtwidgetsexamples/06_item_widgets/02_table_widget.py",
    "src/qtwidgetsexamples/06_item_widgets/03_tree_widget.py",
    "src/qtwidgetsexamples/07_item_views/01_list_view.py",
    "src/qtwidgetsexamples/07_item_views/02_table_view.py",
    "src/qtwidgetsexamples/07_item_views/03_tree_view.py",
    "src/qtwidgetsexamples/08_containers/01_group_box.py",
    "src/qtwidgetsexamples/08_containers/02_scroll_area.py",
    "src/qtwidgetsexamples/08_containers/03_tool_box.py",
    "src/qtwidgetsexamples/08_containers/04_tab_widget.py",
    "src/qtwidgetsexamples/08_containers/05_splitters.py",
    "src/qtwidgetsexamples/09_main_window/01_central_widget.py",
    "src/qtwidgetsexamples/09_main_window/02_status_bar.py",
    "src/qtwidgetsexamples/09_main_window/03_menus.py",
    "src/qtwidgetsexamples/09_main_window/04_toolbar.py",
    "src/qtwidgetsexamples/09_main_window/05_dock_widget.py",
    "src/qtwidgetsexamples/09_main_window/icons/about.png",
    "src/qtwidgetsexamples/09_main_window/icons/bold.png",
    "src/qtwidgetsexamples/09_main_window/icons/exit.png",
    "src/qtwidgetsexamples/09_main_window/icons/italic.png",
    "src/qtwidgetsexamples/10_dialogs/01_message_boxes.py",
    "src/qtwidgetsexamples/10_dialogs/02_dialogs.py",
    "src/qtwidgetsexamples/11_multithreading/00_block_gui_thread.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/01_movetothread_template.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/02_movetothread_walk_filesystem.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/03_movetothread_template_reuse_thread.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/04_movetothread_walkfs_reuse_thread.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/05_signals_and_slots_across_threads.py",
    "src/qtwidgetsexamples/11_multithreading/01_movetothread/99_movetothread_filecopy.py",
    "src/qtwidgetsexamples/11_multithreading/02_qthread_subclass/01_qthreadsubclass_template.py",
    "src/qtwidgetsexamples/11_multithreading/02_qthread_subclass/02_qthreadsubclass_walk_filesystem.py",
    "src/qtwidgetsexamples/11_multithreading/02_qthread_subclass/99_qthreadsubclass_filecopy.py",
    "src/qtwidgetsexamples/11_multithreading/03_qthreadpool/01_threadpool_template.py",
    "src/qtwidgetsexamples/11_multithreading/03_qthreadpool/02_threadpool_walk_filesystem.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/01_list_model.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/02_list_model_editable.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/03_list_model_datawidgetmapper.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/04_list_model_resizable_without_mapper.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/05_list_model_resizable.py",
    "src/qtwidgetsexamples/12_model_view_programming/01_qabstractlistmodel/data.csv",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/01_table_model.py",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/02_table_model_editable.py",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/03_table_model_datawidgetmapper.py",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/04_table_model_resizable.py",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/05_table_model_resizable_datawidgetmapper.py",
    "src/qtwidgetsexamples/12_model_view_programming/02_qabstracttablemodel/data.csv",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/01_item_model.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/02_item_model_tree_view.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/03_item_model_tree_view_multiple_columns.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/04_item_model_tree_view_refactored.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/05_item_model_tree_view_editable.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/06_item_model_tree_view_resizable.py",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/data.csv",
    "src/qtwidgetsexamples/12_model_view_programming/03_qabstractitemmodel/data.json",
    "src/qtwidgetsexamples/12_model_view_programming/04_delegates/01_dataitemroles.py",
    "src/qtwidgetsexamples/12_model_view_programming/04_delegates/02_qitemeditorfactory_standard.py",
    "src/qtwidgetsexamples/12_model_view_programming/04_delegates/03_qitemeditorfactory_custom.py",
    "src/qtwidgetsexamples/12_model_view_programming/04_delegates/04_qstyleditemdelegate_subclass_standard.py",
    "src/qtwidgetsexamples/12_model_view_programming/04_delegates/05_qstyleditemdelegate_subclass_custom.py",
    "src/qtwidgetsexamples/12_model_view_programming/05_sorting_and_filtering/01_sort_method_in_place.py",
    "src/qtwidgetsexamples/12_model_view_programming/05_sorting_and_filtering/02_sort_method_non_destructive.py",
    "src/qtwidgetsexamples/12_model_view_programming/05_sorting_and_filtering/03_non_interactive_sorting.py",
    "src/qtwidgetsexamples/12_model_view_programming/05_sorting_and_filtering/04_proxy_model_sort.py",
    "src/qtwidgetsexamples/12_model_view_programming/05_sorting_and_filtering/05_proxy_model_filter.py",
    "src/qtwidgetsexamples/12_model_view_programming/06_selection/01_selection.py",
    "src/qtwidgetsexamples/13_events/01_event_handlers.py",
    "src/qtwidgetsexamples/13_events/02_event_filter.py",
    "src/qtwidgetsexamples/13_events/03_event_filter_reuse.py",
    "src/qtwidgetsexamples/13_events/04_custom_events.py",
    "src/qtwidgetsexamples/13_events/05_event_filter_application.py",
    "src/qtwidgetsexamples/13_events/06_application_notify.py",
    "src/qtwidgetsexamples/13_events/07_event_delivery_order_1.py",
    "src/qtwidgetsexamples/13_events/07_event_delivery_order_2.py",
    "src/qtwidgetsexamples/13_events/07_event_delivery_order_3.py",
    "src/qtwidgetsexamples/13_events/08_event_propagation.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/01_connection_object.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/02_multiple_slots.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/03_direct_connection.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/04_queued_connection.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/05_blocking_queued_connection.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/06_unique_connection.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/07_single_shot_connection.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/08_disconnecting.py",
    "src/qtwidgetsexamples/14_more_signals_and_slots/09_connect_slots_by_name.py",
    "src/qtwidgetsexamples/15_properties/01_define_properties.py",
    "src/qtwidgetsexamples/15_properties/02_dynamic_properties.py",
    "src/qtwidgetsexamples/15_properties/03_dynamic_properties.py",
    "src/qtwidgetsexamples/15_properties/04_metaobject_system_integration.py",
    "src/qtwidgetsexamples/15_properties/05_property_animation.py",
    "src/qtwidgetsexamples/16_thread_synchronization/00_request_response.py",
    "src/qtwidgetsexamples/16_thread_synchronization/01_race_condition.py",
    "src/qtwidgetsexamples/16_thread_synchronization/02_request_response.py",
    "src/qtwidgetsexamples/16_thread_synchronization/03_invoke_method.py",
    "src/qtwidgetsexamples/16_thread_synchronization/04_mutex.py",
    "src/qtwidgetsexamples/16_thread_synchronization/05_mutex_locker.py",
    "src/qtwidgetsexamples/16_thread_synchronization/06_semaphore.py",
    "src/qtwidgetsexamples/16_thread_synchronization/07_semaphore_releaser.py",
    "src/qtwidgetsexamples/16_thread_synchronization/08_wait_condition.py",
    "src/qtwidgetsexamples/16_thread_synchronization/deadlock.py",
    "src/qtwidgetsexamples/16_thread_synchronization/qthreadpool.py",
    "src/qtwidgetsexamples/17_processes/01_process_execution.py",
    "src/qtwidgetsexamples/17_processes/02_process_input.py",
    "src/qtwidgetsexamples/17_processes/03_readAllStandardOutput_problem_a.py",
    "src/qtwidgetsexamples/17_processes/03_readAllStandardOutput_problem_b.py",
    "src/qtwidgetsexamples/17_processes/04_variable_process_input.py",
    "src/qtwidgetsexamples/18_databases/00_generate_database.py",
    "src/qtwidgetsexamples/18_databases/01_connection.py",
    "src/qtwidgetsexamples/18_databases/02_simple_query.py",
    "src/qtwidgetsexamples/18_databases/03_insert_data.py",
    "src/qtwidgetsexamples/18_databases/04_update_record.py",
    "src/qtwidgetsexamples/18_databases/05_prepared_statements.py",
    "src/qtwidgetsexamples/18_databases/06_transactions.py",
    "src/qtwidgetsexamples/18_databases/07_qsqltablemodel.py",
    "src/qtwidgetsexamples/18_databases/08_qsqlrelationaltablemodel.py",
    "src/qtwidgetsexamples/18_databases/09_qsqlquerymodel.py",
    "src/qtwidgetsexamples/18_databases/10_concurrent_access.py",
    "src/qtwidgetsexamples/18_databases/finance_demo.sql",
    "src/qtwidgetsexamples/19_timers/01_single_shot.py",
    "src/qtwidgetsexamples/19_timers/02_starting_and_stopping.py",
    "src/qtwidgetsexamples/19_timers/03_changing_interval.py",
    "src/qtwidgetsexamples/19_timers/04_countdown.py",
    "src/qtwidgetsexamples/19_timers/05_stopwatch.py",
    "src/qtwidgetsexamples/19_timers/06_timer_chain.py",
    "src/qtwidgetsexamples/19_timers/07_polling.py",
    "src/qtwidgetsexamples/19_timers/08_track_events.py",
    "src/qtwidgetsexamples/19_timers/09_drift_correction.py",
    "src/qtwidgetsexamples/20_networking/01_tcp_client.py",
    "src/qtwidgetsexamples/20_networking/02_tcp_server.py",
    "src/qtwidgetsexamples/20_networking/03_blocking_tcp_client.py",
    "src/qtwidgetsexamples/20_networking/04_udp_client_server.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/01_simple_parent_child.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/02_automatic_child_deletion.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/03_reparenting.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/04_finding_children.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/05_object_tree_visualization.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/06_adopting_external_objects.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/07_manual_ownership_transfer.py",
    "src/qtwidgetsexamples/21_object_trees_and_ownership/08_object_trees_multithreading.py",
]